
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.14) stable; urgency=low

 * redesign of TXStringlist file in and out encoding
 * call of patches section with /encoding parameter

-- d.oertel <d.oertel@uib.de> Fri, 29 Jan 2021 15:00

opsi-winst/opsi-script (4.12.4.13) stable; urgency=low

 * osfunc: new: TUibIniFile.ReadRawSection (by j.laajili)
 * new function getSectionFromIniFile based on ReadRawSection (by j.laajili)
 * osxmlsections: fix for xml2 delnode

-- d.oertel <d.oertel@uib.de> Mon, 25 Jan 2021 15:00

opsi-winst/opsi-script (4.12.4.12) stable; urgency=low

 * repair center batchgui on screen
 * osregex: another empty string regex test
 * license functions: opsiserviceuser if possible
 * linux: shellBatch implemented as shellInAnIcon
 * macos: osfunclin: getmyipbytarget: use path to ip command
 * macos: runningWithGui also working for macos

-- d.oertel <d.oertel@uib.de> Wed, 16 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.11) stable; urgency=low

 * files: copy: deny-list with '.DS_Store'
 * files: on 'permission denied' call handle.exe if existing in opsi-script directory
 * dosInAnIcon: if win7 and no new Arguments then call runAndCaptureOut

-- d.oertel <d.oertel@uib.de> Mon, 14 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.10) experimental; urgency=low

 * macos: modify locale path for opsi-script-gui.app
 * macos / linux: oscheck_gui_startable: kill opsi-laz-gui-test if not terminated
 * osregex: filter empty input to avoid execeptions
 * macos: shellBatch implemented as shellInAnIcon
 * osnetworkcalculator: net gethostbyname(<ip>)
 * osparser: GetIpByName: use new gethostbyname

-- d.oertel <d.oertel@uib.de> Thu, 26 Nov 2020 15:00


opsi-winst/opsi-script (4.12.4.9) experimental; urgency=low
